// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viewNotesRoute > handles case with no comments 1`] = `
"
    

<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


  
  <div class="govuk-service-navigation govuk-!-margin-bottom-6" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    


  <h2 class="govuk-heading-l govuk-!-margin-top-6">Notes</h2>

  <a href="/cases/68495db5afe2d27b09b2ee47/notes/new" class="govuk-button govuk-button--primary">
    Add note
  </a>

        "
`;

exports[`viewNotesRoute > handles case with null comments 1`] = `
"
    

<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


  
  <div class="govuk-service-navigation govuk-!-margin-bottom-6" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    


  <h2 class="govuk-heading-l govuk-!-margin-top-6">Notes</h2>

  <a href="/cases/68495db5afe2d27b09b2ee47/notes/new" class="govuk-button govuk-button--primary">
    Add note
  </a>

        "
`;

exports[`viewNotesRoute > renders page and returns 200 ok 1`] = `
"
    

<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
      </div>
    </div>
  </div>
</div>


  
  <div class="govuk-service-navigation govuk-!-margin-bottom-6" data-module="govuk-service-navigation">
      <div class="govuk-width-container">

    <div class="govuk-service-navigation__container">
      

      
        <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
          <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
            Menu
          </button>

          <ul class="govuk-service-navigation__list" id="navigation">

            
              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47">
                                    
Tasks
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/case-details">
                                    
Case Details
                  </a>
              </li>

              
              <li class="govuk-service-navigation__item govuk-service-navigation__item--active">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/notes" aria-current="true">
                                    
                  <strong class="govuk-service-navigation__active-fallback">Notes</strong>

                  </a>
              </li>

              
              <li class="govuk-service-navigation__item">
                  <a class="govuk-service-navigation__link" href="/cases/68495db5afe2d27b09b2ee47/timeline">
                                    
Timeline
                  </a>
              </li>

            </ul>
        </nav>
    </div>

    </div>

  </div>


    


  <h2 class="govuk-heading-l govuk-!-margin-top-6">Notes</h2>

  <a href="/cases/68495db5afe2d27b09b2ee47/notes/new" class="govuk-button govuk-button--primary">
    Add note
  </a>


    <table class="govuk-table" data-module="moj-sortable-table">
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header" aria-sort="descending">Date</th>
      <th scope="col" class="govuk-table__header" aria-sort="ascending">Type</th>
      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Note</th>
      <th scope="col" class="govuk-table__header" aria-sort="ascending">Added by</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <td class="govuk-table__cell govuk-table__cell--selected" data-sort-value="2025-01-01"><a id="note-undefined"></a>1 Jan 2025</td>
      <td class="govuk-table__cell">NOTE_ADDED</td>
      <td class="govuk-table__cell wrap-all-text">
<div data-module="expandable-text" data-truncate-length="100" data-expand-text="read full text">
    <span class="expandable-text__content">This is a test note</span>
</div>
</td>
      <td class="govuk-table__cell">John Smith</td>
    </tr>
  </tbody>
</table>

        "
`;
